# cpp-project-template

./: .clang-tidy  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml  conanfile.txt  setup_project.py  sonar-project.properties
.github/workflows/: ci.yml  inject_docs_metadata.py  install_gcc.sh  install_llvm.sh  resolve_test_executable.py
apps/: CMakeLists.txt  app.cpp
cmake/: CompilerWarnings.cmake  ExecuteConanInstall.cmake  ExecutePVSAnalyzer.cmake  FindPVSExecutable.cmake  PreventInSourceBuilds.cmake  PrintToolVersions.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
conan_profiles/: README.MD  linux  linux-clang  linux-gcc  macos  macos-clang  macos-gcc  win-msvc  win-msys2  win-msys2-clang  win-msys2-gcc
docs/: CMakeLists.txt  mainpage.md
include/myproject/: myproject.hpp
pvs/: CMakeLists.txt
src/: CMakeLists.txt  myproject.cpp
test/: CMakeLists.txt  myproject_test.cpp
